# TMJ_Extension

./: .gitignore  CMakeLists.txt  CURRENT_STATUS.md  FOLDER_STRUCTURE_DESIGN.md  GOLD_STANDARD_GUIDE.md  PROJECT_STRUCTURE.md  README.md  SIMILARITY_TRANSFORM_SUMMARY.md  TMJExtension.s4ext  USAGE_GUIDE.md
TMJExtension/: CMakeLists.txt  TMJExtension.py
TMJExtension/CoarseRegistration/: README.md  __init__.py  coarse_registration_logic.py  coarse_registration_widget.py
TMJExtension/DataManager/: __init__.py  data_manager_logic.py  data_manager_widget.py
TMJExtension/GoldStandardSet/: __init__.py  gold_standard_logic.py  gold_standard_widget.py
TMJExtension/ROIMaskSet/: __init__.py  roi_mask_set_logic.py  roi_mask_set_widget.py
